# 2d-game-cpp

./: .gitignore  CMakeLists.txt  README.md
gameska/: .gitignore  CMakeLists.txt  main.cpp
gameska/backEnd/: renderEngine.cpp  renderEngine.h  todoMetodej.txt
gameska/backEnd/gameLogic/: Camera.cpp  Camera.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  LevelLogic.cpp  LevelLogic.h
gameska/backEnd/render/: Camera.cpp  ConsoleBuffer.cpp  RenderEngine.cpp  RenderEngine.h  TerminalUtils.cpp  TerminalUtils.h  UIRender.cpp  UIRender.h  consoleBuffer.cpp  consoleBuffer.h  renderEngine.cpp  renderEngine.h
gameska/backEnd/types/: Color.h  Command.h  Vec2.h
gameska/frontEnd/Classes/: Dragon.cpp  Dragon.h  Enemy.cpp  Enemy.h  HealingPotion.cpp  HealingPotion.h  Item.cpp  Item.h  Key.cpp  Key.h  MainInheriteClass.cpp  MainInheriteClass.h  Map.cpp  Map.h  MapBlock.cpp  MapBlock.h  Player.cpp  Player.h  Rat.cpp  Rat.h  Skeleton.cpp  Skeleton.h  Spider.cpp  Spider.h  Weapon.cpp  Weapon.h  mainInheriteClass.cpp  mainInheriteClass.h  map.cpp  map.h
gameska/frontEnd/Classes/Menu/: CreditsScreen.cpp  CreditsScreen.h  MainMenuDesign.cpp  MainMenuDesign.h  MenuCommands.h  PauseMenu.cpp  PauseMenu.h  StoryScreen.cpp  StoryScreen.h
